# ai_diary

./: README.md  pyproject.toml  requirements.txt
src/: test.py
src/ai_diary/: crew.py  main.py  streamlit_app.py
src/ai_diary/config/: agents.yaml
src/transcriber/: main.py
src/transcriber/config/: tasks.yaml
