[project]
name = "transcriber"
version = "0.1.0"
description = "transcriber using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
transcriber = "transcriber.main:run"
run_crew = "transcriber.main:run"
train = "transcriber.main:train"
replay = "transcriber.main:replay"
test = "transcriber.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
