[project]
name = "ai_diary"
version = "0.1.0"
description = "ai_diary using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
ai_diary = "ai_diary.main:run"
run_crew = "ai_diary.main:run"
train = "ai_diary.main:train"
replay = "ai_diary.main:replay"
test = "ai_diary.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["ai_diary"]
